[gd_scene load_steps=24 format=3 uid="uid://7ye6qbfr8o2w"]

[ext_resource type="Script" path="res://scripts/screens/cutscene_screen.gd" id="1_d6lcx"]
[ext_resource type="FontFile" uid="uid://dm2rmmhs7n068" path="res://assets/fonts/slkscr.ttf" id="2_sys1v"]
[ext_resource type="PackedScene" uid="uid://bskmwtwn2dxm2" path="res://scenes/cutscene/scene_1.tscn" id="3_jef18"]
[ext_resource type="PackedScene" uid="uid://5yii1eldt02v" path="res://scenes/cutscene/scene_2-1.tscn" id="4_2vxri"]
[ext_resource type="Script" path="res://scripts/cutscene_scripts/scene_1.gd" id="4_pewto"]
[ext_resource type="PackedScene" uid="uid://bkvd1jf8dnh2a" path="res://scenes/cutscene/scene_2_2.tscn" id="5_04p6s"]
[ext_resource type="Script" path="res://scripts/cutscene_scripts/scene_2_1.gd" id="6_vo6wn"]
[ext_resource type="Script" path="res://scripts/cutscene_scripts/scene_2_2.gd" id="8_su18d"]
[ext_resource type="PackedScene" uid="uid://cqy0s5c5ac04q" path="res://scenes/cutscene/scene_3.tscn" id="9_yqqm5"]
[ext_resource type="Script" path="res://scripts/cutscene_scripts/scene_3.gd" id="10_86etj"]
[ext_resource type="PackedScene" uid="uid://dopp8lnc4eiq5" path="res://scenes/cutscene/scene_4.tscn" id="11_ulicb"]
[ext_resource type="Script" path="res://scripts/cutscene_scripts/scene_4.gd" id="12_crtim"]
[ext_resource type="PackedScene" uid="uid://d0rm5bg1t2ecd" path="res://scenes/cutscene/scene_5_1.tscn" id="13_enish"]
[ext_resource type="Script" path="res://scripts/cutscene_scripts/scene_5_1.gd" id="14_tcop1"]
[ext_resource type="PackedScene" uid="uid://bgam4ytcqsfje" path="res://scenes/cutscene/scene_5_2.tscn" id="15_nhtcp"]
[ext_resource type="Script" path="res://scripts/cutscene_scripts/scene_5_2.gd" id="16_bpiwe"]
[ext_resource type="PackedScene" uid="uid://2185k4tcxxvx" path="res://scenes/cutscene/scene_7.tscn" id="17_k83sb"]
[ext_resource type="Script" path="res://scripts/cutscene_scripts/scene_7.gd" id="18_8mfy0"]
[ext_resource type="PackedScene" uid="uid://batwdxv1nghav" path="res://scenes/cutscene/scene_8_1.tscn" id="19_qkhh2"]
[ext_resource type="Script" path="res://scripts/cutscene_scripts/scene_8_1.gd" id="20_qr060"]
[ext_resource type="PackedScene" uid="uid://d13sc5n06tgug" path="res://scenes/cutscene/scene_8_2.tscn" id="21_l7mcb"]
[ext_resource type="Script" path="res://scripts/cutscene_scripts/scene_8_2.gd" id="22_bswra"]

[sub_resource type="FontVariation" id="FontVariation_636jv"]
base_font = ExtResource("2_sys1v")
spacing_glyph = -1

[node name="Cutscene" type="CanvasLayer" node_paths=PackedStringArray("slides")]
script = ExtResource("1_d6lcx")
slides = [NodePath("Scene1"), NodePath("Scene2-1"), NodePath("Scene 2-2"), NodePath("Scene3"), NodePath("Scene4"), NodePath("Scene5-1"), NodePath("Scene5-2"), NodePath("Scene7"), NodePath("Scene8-1"), NodePath("Scene8-2")]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Text" type="Control" parent="."]
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_left = 596.0
offset_top = 136.0
offset_right = 636.0
offset_bottom = 176.0

[node name="Timer" type="Timer" parent="Text"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ContinueText" type="Label" parent="Text"]
layout_mode = 0
offset_top = -21.0
offset_right = 710.0
offset_bottom = 30.0
theme_override_fonts/font = SubResource("FontVariation_636jv")
theme_override_font_sizes/font_size = 50
text = "Press click to continue"
horizontal_alignment = 1

[node name="EscapeText" type="Label" parent="Text"]
layout_mode = 0
offset_left = -43.0
offset_top = 49.0
offset_right = 765.0
offset_bottom = 102.0
theme_override_fonts/font = SubResource("FontVariation_636jv")
theme_override_font_sizes/font_size = 50
text = "Press ESC to skip cutscene"
horizontal_alignment = 1

[node name="Scene1" parent="." instance=ExtResource("3_jef18")]
script = ExtResource("4_pewto")

[node name="Scene2-1" parent="." instance=ExtResource("4_2vxri")]
script = ExtResource("6_vo6wn")

[node name="Scene 2-2" parent="." instance=ExtResource("5_04p6s")]
script = ExtResource("8_su18d")

[node name="Scene3" parent="." instance=ExtResource("9_yqqm5")]
script = ExtResource("10_86etj")

[node name="Scene4" parent="." instance=ExtResource("11_ulicb")]
script = ExtResource("12_crtim")

[node name="Scene5-1" parent="." instance=ExtResource("13_enish")]
script = ExtResource("14_tcop1")

[node name="Scene5-2" parent="." instance=ExtResource("15_nhtcp")]
script = ExtResource("16_bpiwe")

[node name="Scene7" parent="." instance=ExtResource("17_k83sb")]
script = ExtResource("18_8mfy0")

[node name="Scene8-1" parent="." instance=ExtResource("19_qkhh2")]
script = ExtResource("20_qr060")

[node name="Scene8-2" parent="." instance=ExtResource("21_l7mcb")]
script = ExtResource("22_bswra")

[connection signal="timeout" from="Text/Timer" to="." method="_on_timer_timeout"]
